--- a/index.html
+++ b/index.html
@@ -1,33 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <!-- VUE CDN -->
+  <head>
+    <!-- vue cdn -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso VUE3</title>
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <h1>
-            {{ message }}
-        </h1> 
-           <input type="text" name="" id="" v-model="message">
+      <div class="cart">Cart: {{cart}}</div>
+      <div class="”product-display”">
+        <div class="”product-container”">
+          <div class="”product-image”">
+            <img :src="image" alt="”img-product”" style="width: 20%" />
+          </div>
+          <div class="”product-info”">
+            <h1>{{ product_title + "   " + brand }}</h1>
+            <p v-if="inStock > 10">in stock</p>
+            <p v-else-if="inStock < 10 && inStock > 1">almost out of stock</p>
+            <p v-else>out of stock</p>
+            <ul>
+              <li v-for="detail in details">{{detail}}</li>
+            </ul>
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="changeImage(variant.image)"
+              class="color-circle"
+              :style="{backgroundColor: variant.color}"
+            ></div>
+            <button class="button" :class="{disabledButton : inStock < 1}"  @click="addToCart" :disabled="inStock < 1">
+              Add to Cart
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
-      const { createApp, ref } = Vue
-    
+      const { createApp, ref } = Vue;
+
       createApp({
         setup() {
-          const message = ref('Hello Vue!')
+          const cart = ref(9);
+          const addToCart = () => {
+            cart.value += 1;
+          };
+          const image = ref("assets/images/t-shirt-blue.png");
+          const changeImage = (variantImage) => {
+            image.value = variantImage;
+          };
           return {
-            message
-          }
-        }
-      }).mount('#app')
+            product_title: ref("T-shirt"),
+            brand: 'Marconyu',
+            image,
+            inStock: ref(0),
+            details: ["50% Cotton", "30% Polyester", "20% Woll"],
+            variants: [
+              { id: 1, color: "blue", image: "assets/images/t-shirt-blue.png" },
+              {
+                id: 2,
+                color: "green",
+                image: "assets/images/t-shirt-green.png",
+              },
+            ],
+            cart,
+            addToCart,
+            changeImage,
+          };
+        },
+      }).mount("#app");
     </script>
-</body>
+  </body>
 </html>
